<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_l1"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ConfigImageActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_title"
        android:textColor="@color/color_c1"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:hint="@string/hint_title"
        android:maxLength="25"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:background="@color/color_n1"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_background_image"
            android:textColor="@color/color_c1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_choose_image" />

        <FrameLayout
            android:id="@+id/frPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@color/color_c1" />
    </LinearLayout>
</LinearLayout>